# GLX

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CleanProjects.bat  CleanProjects.sh  GLXExternal.lua  GenerateProjects.bat  GenerateProjects.sh  OpenGLExternal.lua  README.md  imgui.ini  premake5.lua  tasks.py
GLX/: CMakeLists.txt  premake5.lua
GLX/src/: Main.cpp
GLX/src/Camera/: Camera.cpp  Camera.h  Frustum.h  FrustumPlane.h
GLX/src/Core/: Application.cpp  Application.h  Console.cpp  Console.h  Core.h  ImGuiSink.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  ResourceManager.cpp  ResourceManager.h  Window.cpp  Window.h
GLX/src/ImGui/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h  ImGuiLayer.cpp
GLX/src/Lighting/: DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h
GLX/src/Mesh/: AABB.h  BoundingVolume.h  Cube.cpp  Cube.h  Entity.cpp  Entity.h  Material.h  ModelEntity.cpp  ModelEntity.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  SphereBV.h  SquareAABB.h  Transform.cpp  Transform.h
GLX/src/Renderer/: AABB.h  BoundingVolume.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  FrameBuffer.cpp  FrameBuffer.h  Frustum.h  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PBR.cpp  PBR.h  Plane.h  PostProcessor.cpp  PostProcessor.h  RendererLayer.cpp  RendererLayer.h  RendererLibrary.cpp  RendererLibrary.h  Shader.cpp  Shader.h  Sphere.h  SquareAABB.h  Transform.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
GLX/src/Resources/: Animation.h  Animator.h  Bone.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
GLX/src/Sandbox/: SandboxLayer.cpp  SandboxLayer.h
GLX/src/Utils/: assimp_glm_helpers.h  gl_tools.h  glfw_tools.h
OpenGL/: premake5.lua
OpenGL/src/: Main.cpp
OpenGL/src/Core/: Application.cpp  Application.h  Layer.cpp  Log.h  ResourceManager.cpp  ResourceManager.h  Window.cpp  Window.h
OpenGL/src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
OpenGL/src/Renderer/: Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h
OpenGL/src/Sandbox/: SandboxLayer.cpp  SandboxLayer.h
OpenGL/src/Utils/: glfw_tools.h
assets/objects/arrow/: simple_arrow.gltf
assets/objects/backpack/: backpack.mtl
assets/objects/cyberpunk_character/: cyberpunk_character.gltf
assets/objects/vampire/: standing_idle.fbx  standing_run_back.fbx  standing_run_forward.fbx  standing_run_forward_stop.fbx  standing_run_left.fbx  standing_run_right.fbx  standing_turn_90_left.fbx  standing_turn_90_right.fbx  standing_walk_back.fbx  standing_walk_forward.fbx  standing_walk_left.fbx  standing_walk_right.fbx
assets/shaders/: basicFS.glsl  basicVS.glsl  blurFS.glsl  brdfFS.glsl  compositeFS.glsl  cubemapVS.glsl  debugDepthCubeMapFS.glsl  debugDepthCubeMapVS.glsl  debugDepthMapFS.glsl  debugFS.glsl  default.shader  depthCubeMapFS.glsl  depthCubeMapGS.glsl  depthCubeMapVS.glsl  depthMapFS.glsl  depthMapGS.glsl  depthMapVS.glsl  depthQuadFS.glsl  depthQuadVS.glsl  downsampleFS.glsl  equirectangularToCubemapFS.glsl  geometryNormalsFS.glsl  geometryNormalsGS.glsl  geometryNormalsVS.glsl  gizmoFS.glsl  gizmoVS.glsl  hdrSkyboxFS.glsl  hdrSkyboxVS.glsl  instancingNormalsFS.glsl  instancingNormalsVS.glsl  irradianceConvolutionFS.glsl  lightSourceFS.glsl  lightSourceVS.glsl  lightingFS.glsl  lightingVS.glsl  modelVS.glsl  pbrFS.glsl  pbrTexturedFS.glsl  pbrTexturedGLTFFS.glsl  pbrVS.glsl  (+5 more)
